--- a/_accSetting.html
+++ b/_accSetting.html
@@ -66,7 +66,7 @@
             <div class="alert alert-danger fade in" id="accsetting_warning">
                 <strong>Danger!</strong> There are some empty fields!
             </div>
-            <div class="btn waves-effects orange" id="accsetting_submit_info" type="submit">Update
+            <div class="btn waves-effects" id="accsetting_submit_info" type="submit">Update
             </div>
         </div>
     </div>
