--- a/_checkout.html
+++ b/_checkout.html
@@ -33,8 +33,8 @@
 
     <div class="row" style="text-align: center">
         <div class="col-xs-12">
-            <a id="checkout-back" type="button" class="btn waves-effects orange"><< Back</a>
-            <a id="checkout_submitcheckout" type="button" class="btn waves-effects orange">Pay and Submit >></a>
+            <a id="checkout-back" type="button" class="btn waves-effects"><< Back</a>
+            <a id="checkout_submitcheckout" type="button" class="btn waves-effects">Pay and Submit >></a>
         </div>
     </div>
 
