--- a/_confirmCompletion.html
+++ b/_confirmCompletion.html
@@ -39,7 +39,7 @@
                 </div>
             </div>
 
-            <a type="button" class="btn waves-effects orange" id="driver_confirm_button">Confirm</a>
+            <a type="button" class="btn waves-effects" id="driver_confirm_button">Confirm</a>
         </div>
     </div>
 </div>
