--- a/_confirmTicket.html
+++ b/_confirmTicket.html
@@ -53,7 +53,7 @@
                 </div>
             </div>
 
-            <a type="button" class="btn waves-effects orange" id="confirmTicket_button">Confirm</a>
+            <a type="button" class="btn waves-effects" id="confirmTicket_button">Confirm</a>
         </div>
     </div>
 </div>
