--- a/_congratsTicketClosed.html
+++ b/_congratsTicketClosed.html
@@ -5,7 +5,7 @@
             <div>
                 <h2> Congratulations!</h2>
                 <h5> This ticket has been successfully closed. </h5>
-                <a type="button" class="btn waves-effects orange" id="_congratsClosed">
+                <a type="button" class="btn waves-effects" id="_congratsClosed">
                     Go To You Orders
                 </a>
             </div>
