--- a/_rateDriver.html
+++ b/_rateDriver.html
@@ -24,8 +24,8 @@
 
     </div>
     <div class="col-xs-12">
-        <a id="rate-driver-skip" type="button" class="btn waves-effect orange driverRate_button">Skip</a>
-        <a id="rate-driver" type="button" class="btn waves-effect orange driverRate_button">Rate!</a>
+        <a id="rate-driver-skip" type="button" class="btn waves-effect driverRate_button">Skip</a>
+        <a id="rate-driver" type="button" class="btn waves-effect driverRate_button">Rate!</a>
     </div>
 
 </div>
