--- a/_rateUser.html
+++ b/_rateUser.html
@@ -23,8 +23,8 @@
 
     </div>
     <div class="col-xs-12">
-        <a id="rate-user-skip" type="button" class="btn waves-effect orange userRate_button">Skip</a>
-        <a id="rate-user" type="button" class="btn waves-effect orange userRate_button">Rate!</a>
+        <a id="rate-user-skip" type="button" class="btn waves-effect userRate_button">Skip</a>
+        <a id="rate-user" type="button" class="btn waves-effect userRate_button">Rate!</a>
     </div>
 
 </div>
