--- a/_shopping.html
+++ b/_shopping.html
@@ -22,7 +22,7 @@
             <div class="col-xs-4" id="shopping_numItems"></div>
 
             <div class="col-xs-12">
-                <a id="shopping-back" type="button" class="btn waves-effects orange"><< Back</a>
+                <a id="shopping-back" type="button" class="btn waves-effects"><< Back</a>
 
                 <a id="shopping_submit_list" type="button" class="waves-teal btn waves-effects">
                     Continue >>
