--- a/_driverList.html
+++ b/_driverList.html
@@ -17,12 +17,12 @@
         </div>
 
         <div class="col-xs-12">
-            <a id="driverList-location-back" type="button" class="btn waves-effects orange"><< Back</a>
-            <a id="_driver_submit_list" type="button" class="waves-teal btn waves-effects">
-                Complete
-            </a>
+            <a id="driverList-location-back" type="button" class="btn waves-effects "><< Back</a>
             <a id="driver_messenger" type="button" class="waves-teal btn waves-effects">
                 Messenger
+            </a>
+            <a id="_driver_submit_list" type="button" class="waves-teal btn waves-effects">
+                Complete >>
             </a>
         </div>
     </div>
