--- a/_purchasedTickets.html
+++ b/_purchasedTickets.html
@@ -42,11 +42,11 @@
         <div class="col-xs-12">
             <div class="row" id="purchasedTickets_footerInfo">
                 <div class="col-xs-12">
-                    <a id="purchasedTickets-back" type="button" class="btn waves-effects orange"><< Back</a>
-                    <a id="purchasedTickets-messenger" type="button" class="btn waves-effects orange">
+                    <a id="purchasedTickets-back" type="button" class="btn waves-effects "><< Back</a>
+                    <a id="purchasedTickets-messenger" type="button" class="btn waves-effects ">
                         Messenger
                     </a>
-                    <a id="purchasedTickets_submit_list" type="button" class="btn waves-effects orange">Close Ticket >></a>
+                    <a id="purchasedTickets_submit_list" type="button" class="btn waves-effects ">Close Ticket >></a>
                 </div>
             </div>
         </div>
