--- a/_submitted.html
+++ b/_submitted.html
@@ -3,7 +3,7 @@
         <div class="col-xs-12">
             <h2>Ticket Submitted</h2>
             <h5>Your service fee has been received, and your ticket is now submitted to the Fetch queue!</h5>
-            <a id="submit_submitted" type="button" class="btn waves-effect orange">View Ticket Status</a>
+            <a id="submit_submitted" type="button" class="btn waves-effect">View Ticket Status</a>
         </div>
     </div>
 </div>
