removed all alerts

--- a/sessionTest.html
+++ b/sessionTest.html
@@ -17,7 +17,7 @@ Click to send ajax
                url: "/session",
                data: { contentA: "a", contentB: "B"},
                success: function(data){
-                   alert(data);
+//                   alert(data);
                }
            });
         });
