--- a/template.html
+++ b/template.html
@@ -113,11 +113,11 @@
                     data: info_to_send,
                     success: function(data){
                         //data is the object sent back on success (could also just be string)
-                        alert("Loged out!");
+//                        alert("Loged out!");
                         window.location.href =" /_homePage.html";
                     },
                     error: function(data){
-                        alert("fail");
+//                        alert("fail");
                         //data is the object send back on fail (could also just be string)
                     }
                 });
