--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
                     canvas.height = img.height / factor;
                     var context = canvas.getContext("2d");
                     context.drawImage(img, 0, 0, canvas.width, canvas.height);
-                    alert();
+//                    alert();
                     $.ajax({
                         type: "POST",
                         contentType: "application/json",
@@ -219,7 +219,7 @@
                             name: name
                         }),
                         success: function () {
-                            alert();
+//                            alert();
                             var chat = $(input.parentNode.parentNode.parentNode).find('.chatForm');
                             chat.find("input").val("<img class='materialboxed' src='/images/chat/" + name + "'/>");
                             chat.submit();
