--- a/index.html
+++ b/index.html
@@ -787,6 +787,7 @@
             data: {name: pageName},
             async: false,
             success: function (data) {
+                console.log(pageName);
                 $('#section-' + row).append("<div><div id='" + pageName +
                         "' data-x='" + column + "' data-y='" + row + "'>" + data + "</div></div>");
             }
