--- a/_receiptPictureEnterPrice.html
+++ b/_receiptPictureEnterPrice.html
@@ -15,7 +15,7 @@
                 Upload Receipt Image<input class="hidden" type="file" id="uploadReceipt1" name="imageLoader"/>
             </label>
 
-            <a class="btn waves-effects orange disabled" id="submitReceiptButton1">Submit</a>
+            <a class="btn waves-effects orange" id="submitReceiptButton1">Submit</a>
             <a class="btn waves-effects orange" id="cancelRecButton1">Cancel</a>
 
 
