fixed tickets stuff

--- a/_congratsTicketClosed.html
+++ b/_congratsTicketClosed.html
@@ -6,7 +6,7 @@
                 <h2> Congratulations!</h2>
                 <h5> This ticket has been successfully closed. </h5>
                 <a type="button" class="btn waves-effects" id="_congratsClosed">
-                    Go To You Orders
+                    Go To Your Orders
                 </a>
             </div>
         </div>
