--- a/allPages.html
+++ b/allPages.html
@@ -921,7 +921,7 @@
                             <h2> Congratulations!</h2>
                             <h5> This ticket has been successfully closed. </h5>
                             <a type="button" class="btn waves-effects" id="_congratsClosed">
-                                Go To You Orders
+                                Go To Your Orders
                             </a>
                         </div>
                     </div>
@@ -1192,7 +1192,7 @@
                             <h2> Congratulations!</h2>
                             <h5> Well Done! We'll notify the shopper that you are on the way! </h5>
                             <a type="button" class="btn waves-effects" id="congrats_end_shopping_to_delivery">
-                                Go To You Deliveries
+                                Go To Your Deliveries
                             </a>
                         </div>
                     </div>
