--- a/index.html
+++ b/index.html
@@ -7,10 +7,17 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
 
+
+    <link href='https://fonts.googleapis.com/css?family=Lobster' rel='stylesheet' type='text/css'>
+
+
+
+
+
+
+
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-
-
-    <!-- Compiled and minified CSS -->
+        <!-- Compiled and minified CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/css/materialize.min.css">
 
     <!-- Compiled and minified JavaScript -->
@@ -36,6 +43,11 @@
 <div id="chats">
 
 </div>
+
+<div id="page-title" class="title-cover">
+    <div id="cover"></div>
+    <div id="title-inner" onclick="goToPage('_homePage')" class="initial">Fetch</div>
+</div>
 <div id="User">
     <div class="jumbotron text-center">
         <div class="row">
@@ -45,10 +57,10 @@
                 <div id="open-menu-drawer" style="display:none"><span class="glyphicon glyphicon-menu-hamburger"></span>
                 </div>
             </div>
-            <div id="Fetch" class=" text-center col-xs-8">
-                <div id="title">Fetch</div>
-            </div>
-            <div class="col-xs-3"></div>
+            <!--<div id="Fetch" class=" text-center col-xs-8">-->
+                <!--<div id="title">Fetch</div>-->
+            <!--</div>-->
+            <!--<div class="col-xs-3"></div>-->
         </div>
     </div>
 </div>
@@ -794,8 +806,24 @@
         });
     }
 
+
+
+
     $(document).ready(function () {
+
+        var done = false;
+        var timeup = false;
+        setTimeout(function(){
+            $("#title-inner").removeClass('initial');
+        }, 1000);
+        setTimeout(function(){
+            if (done) {
+                $("#page-title").removeClass('title-cover');
+            }
+            timeup = true;
+        }, 3500);
         $(document).on('click mousemove focus keypress', loader.setActive);
+
 
         pageInit();
         for (var j = 0; j < allPages.length; j++) {
@@ -806,6 +834,10 @@
                 var clickVal = "onclick=\"goToPage('" + whichid + "');\"";
                 $("#Butt").append("<div " + clickVal + " >" + whichid + "</div>");
             }
+        }
+        done = true;
+        if (timeup) {
+            $("#page-title").removeClass('title-cover');
         }
 
 //        $.ajax({
