buttons tickets dashboard

--- a/_tickets.html
+++ b/_tickets.html
@@ -44,6 +44,14 @@
             <ul id="tickets_content" class=text-center"></ul>
         </div>
     </div>
+
+    <div class="row">
+        <div class="col-xs-12">
+            <a id="tickets_dashboard_btn" type="button" class="waves-teal btn waves-effects">
+                Your Deliveries
+            </a>
+        </div>
+    </div>
 </div>
 
 <div class="footerBars container">
