--- a/_yourDeliveries.html
+++ b/_yourDeliveries.html
@@ -37,7 +37,13 @@
                 </div>
             </div>
         </div>
-
+    </div>
+    <div class="row">
+        <div class="col-xs-12">
+            <a id="yourDeliveries_ticket_btn" type="button" class="waves-teal btn waves-effects">
+                Tickets
+            </a>
+        </div>
     </div>
 </div>
 <div class="footerBars container">
