--- a/_cancelTicket.html
+++ b/_cancelTicket.html
@@ -1,38 +1,37 @@
 <div id="cancelTicket" class="container box text-center">
     <div class="row">
-        <div class="col-xs-12">
+        <div class="col-xs-12 col-md-8 col-md-offset-2">
             <!--<img class="img-circle" id="cancelTicket-img" src="placeholder/person5.png">-->
             <!--<h2 id="listName_cancelTicket"></h2>-->
             <h2>Ticket's details</h2>
         </div>
 
 
-        <div class="col-xs-12">
+        <div class="col-xs-12 col-md-8 col-md-offset-2">
+            <h5>Items</h5>
             <ul id="_cancelTicket_list"></ul>
             <div class="text-left" id="_cancelTicket_numItems"></div>
         </div>
 
-        <div id="cancelTicketCalendarPart" class="col-xs-12">
-            <div class="text-left" id="cancelTicketCalendarHeader">Delivery time:</div>
+        <div id="cancelTicketCalendarPart" class="col-xs-12 col-md-8 col-md-offset-2">
+            <h5  id="cancelTicketCalendarHeader">Delivery Time</h5>
             <div id="cancelTicketCalendar"></div>
         </div>
 
-        <div class="col-xs-12">
-            <div class="text-left" id="cancelTicket_note"></div>
-            <div class="text-left" id="cancelTicket_location"></div>
-            <div class="text-left" id="cancelTicketMapHeader">Delivery location:</div>
+        <div class="col-xs-12 col-md-8 col-md-offset-2">
+            <div class="hidden" id="cancelTicket_note"></div>
+            <div id="cancelTicket_location"></div>
+            <h5 id="cancelTicketMapHeader">Delivery Location</h5>
             <div id="cancelTicketMap" class="map" style="margin: auto"></div>
         </div>
 
-        <div class="col-xs-12">
-            <div class="row" id="_cancelTicket_footerInfo">
+        <div class="col-xs-12 col-md-8 col-md-offset-2">
                 <a id="cancelTicket_list_btn" type="button" class="btn waves-effect">
                     Close
                 </a>
                 <a id="cancelTicket_cancel_btn" type="button" class="btn waves-effect">
                     Cancel ticket
                 </a>
-            </div>
         </div>
     </div>
 </div>
