--- a/_driverList.html
+++ b/_driverList.html
@@ -12,8 +12,9 @@
         <div class="col-xs-12">
             <div class="input-field">
                 <div class="text-left" id="_driver_numItems"></div>
-                <div class="text-left" id="driver_note"></div>
+
             </div>
+            <h5 id="driver_note"></h5>
         </div>
 
         <div class="col-xs-12">
