--- a/index.html
+++ b/index.html
@@ -714,6 +714,7 @@
             $.ajax({
                 type: "POST",
                 url: "/init",
+                async: true,
                 data: {
                     userId: loader.userId
                 },
