lists hover and pointer

--- a/_history.html
+++ b/_history.html
@@ -37,3 +37,19 @@
 </div>
 
 <script src="/js/_history.js"></script>
+
+<style>
+    #history li {
+        position: relative;
+        font-size: 14px;
+        border-top: 1px solid #ededed;
+        font-weight: bold;
+        width: 100%;
+        line-height: 2;
+    }
+
+    #history li:hover {
+        background-color: rgba(33, 19, 0, 0.07);
+        cursor:pointer;
+    }
+</style>
