--- a/_congrats.html
+++ b/_congrats.html
@@ -3,7 +3,7 @@
         <div class="col-xs-12">
             <div>
                 <h2>Congratulations!</h2>
-                <h5>We closed your ticket, and have notified the shopper that you buying their items! </h5>
+                <h5>Congrats on a successful Fetch!</h5>
             </div>
         </div>
 
