--- a/_congratsTicketClosed.html
+++ b/_congratsTicketClosed.html
@@ -1,10 +1,9 @@
-
 <div class="container box text-center">
     <div class="row">
         <div class="col-xs-12">
             <div>
                 <h2> Congratulations!</h2>
-                <h5> This ticket has been successfully closed. </h5>
+                <h5> Congrats on a successful Fetch! </h5>
                 <a type="button" class="btn waves-effects" id="_congratsClosed">
                     Go To Your Orders
                 </a>
