--- a/_rateUser.html
+++ b/_rateUser.html
@@ -10,7 +10,7 @@
 
         <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 " id="rateUser-content" >
             <h2>Rate the shopper!</h2>
-            <h3 id="user-name_rateUser"></h3>
+            <h3 class="hidden" id="user-name_rateUser"></h3>
 
             <div class="rating">
                 <span id="user_rating-1" class="glyphicon glyphicon-heart"></span>
