--- a/_congratsTicketClosed.html
+++ b/_congratsTicketClosed.html
@@ -1,12 +1,11 @@
-
 <div class="container box text-center">
     <div class="row">
         <div class="col-xs-12">
             <div>
                 <h2> Congratulations!</h2>
-                <h5> This ticket has been successfully closed. </h5>
-                <a type="button" class="btn waves-effects orange" id="_congratsClosed">
-                    Go To You Orders
+                <h5> Congrats on a successful Fetch! </h5>
+                <a type="button" class="btn waves-effects" id="_congratsClosed">
+                    Go To Your Orders
                 </a>
             </div>
         </div>
