--- a/_congrats_driver_finish_shopping.html
+++ b/_congrats_driver_finish_shopping.html
@@ -5,8 +5,8 @@
             <div>
                 <h2> Congratulations!</h2>
                 <h5> Well Done! We'll notify the shopper that you are on the way! </h5>
-                <a type="button" class="btn waves-effects orange" id = "congrats_end_shopping_to_delivery">
-                    Go To You Deliveries
+                <a type="button" class="btn waves-effects" id = "congrats_end_shopping_to_delivery">
+                    Go To Your Deliveries
                 </a>
             </div>
         </div>
