--- a/_login.html
+++ b/_login.html
@@ -11,8 +11,8 @@
                 <input type="password" class="form-control" id="login_user_pass" name="password"/><br>
                 <label for="login_user_pass">Password</label>
             </div>
-            <button class="btn waves-effect orange" id="login_butt" type="submit">Login</button><br><br>
-            <a class="col-lg-6" onclick="goToPage('_signUp')"><h6 id="signup-link">Create account</h6></a>
+            <button class="btn waves-effect" id="login_butt" type="submit">Login</button><br><br>
+            <a class="col-lg-6" onclick="goToPage('_signUp')"><h6 id="signup-link">Create Account</h6></a>
             <a  class="col-lg-6" onclick="goToPage('_passwordRecovery')"><h6 id="passwordRecover-link">Forgot Password?</h6></a>
 
 
