--- a/_accSetting.html
+++ b/_accSetting.html
@@ -1,20 +1,24 @@
-<div id="accSetting" class="container box" style="text-align: center">
-    <div class="row" style="height: 100%;">
+<div id="accSetting" class="container box text-center">
+    <div class="row">
 
-        <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6" style="position: relative; height: 442px;">
+        <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 userIcon" >
             <!--<h2>Account Information</h2>-->
-            <div id="user-image-content" style="width: 100%;position: absolute; top: 50%; left: 50%;
-                transform: translate(-50%, -50%)">
-                <img style="margin: 8%" class="img-circle" id="accSettingAbove-img"
-                     src="placeholder/person4.png">
+            <div class = "row test">
+                <div class = "col-xs-12">
+                    <div id="user-image-content" >
+                        <img class="img-circle" id="accSettingAbove-img" src="placeholder/person4.png">
+                    </div>
+                </div>
+            </div>
+            <div class = "row">
                 <div>
                 <a onclick="goToPage('_takeProfilePicture')">Edit Picture</a>
                 </div>
-
             </div>
         </div>
 
-        <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 ">
+
+        <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 accProfile">
             <!--<h2>Account Information</h2>-->
 
             <div id="accProfile">
@@ -67,7 +71,7 @@
             <div class="alert alert-danger fade in" id="accsetting_warning">
                 <strong>Danger!</strong> There are some empty fields!
             </div>
-            <div class="btn waves-effects orange" id="accsetting_submit_info" type="submit">Update
+            <div class="btn waves-effects" id="accsetting_submit_info" type="submit">Update
             </div>
         </div>
     </div>
