--- a/_confirmTicket.html
+++ b/_confirmTicket.html
@@ -1,59 +1,43 @@
 <div class="container box" id="confirmTicket">
     <div class="row text-center">
-        <div class="col-xs-12">
+        <div class="col-xs-12 col-md-8 col-md-offset-2">
             <h2> Confirm your ticket</h2>
-
-            <div class="row">
-                <div class="col-xs-12">
-                    <div class ="col-xs-offset-4 col-xs-4">
-                        <img class="img-circle" id="confirmTicket_img" src="placeholder/person4.png">
-                    </div>
-                    <div id="confirmTicket_icon" class="col-xs-4"></div>
-                    <div id="confirmTicket_name" class="col-xs-8">
-                        <h4 id="confirmTicket_driverName"></h4>
-                    </div>
-                </div>
+        </div>
+        <div class="col-xs-12 col-md-8 col-md-offset-2">
+            <div>
+                <img style="max-width: 400px;" class="img-circle" id="confirmTicket_img" src="placeholder/person4.png">
             </div>
-
-            <div class="container box">
-                <div class="row">
-                    <div class="col-xs-12">
-                        <ul id="confirmTicket_list"></ul>
-                    </div>
-                </div>
-
-                <div class="row">
-                    <div class="col-xs-12">
-                        <div id="_confirm_footerInfo">
-                            <div id="confirmTicket_numItems" class="text-left"></div>
-                            <div id="confirmTicket_price" class="text-left"></div>
-                            <div id="confirmTicket_total_price" class="text-left"></div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="row">
-                    <div class="col-xs-12">
-                        <div id="confirmTicket_receipt"></div>
-                    </div>
-                </div>
+            <div id="confirmTicket_icon"></div>
+            <div id="confirmTicket_name">
+                <h5 id="confirmTicket_driverName"></h5>
             </div>
+        </div>
 
-            <div class="row">
-                <div id="confirmTicket_CalendarPart" class="col-xs-12">
-                    <div class="text-left" id="confirmTicket_CalendarHeader">Delivery time:</div>
-                    <div id="confirmTicket_Calendar"></div>
-                </div>
-            </div>
+        <div class="col-xs-12 col-md-8 col-md-offset-2">
+            <h5>Items</h5>
+            <ul id="confirmTicket_list"></ul>
+        </div>
 
-            <div class="row">
-                <div class="col-xs-12">
-                    <div class="text-left" id="confirmTicket_location"></div>
-                    <div id="confirmTicket_Map" class="map"></div>
-                </div>
-            </div>
+        <div class="col-xs-12 col-md-8 col-md-offset-2">
+            <div id="confirmTicket_numItems" class="text-left"></div>
+            <div id="confirmTicket_price" class="text-left"></div>
+            <div id="confirmTicket_total_price" class="text-left"></div>
+        </div>
+        <div class="col-xs-12 col-md-8 col-md-offset-2">
+            <div id="confirmTicket_receipt"></div>
+        </div>
 
-            <a type="button" class="btn waves-effects orange" id="confirmTicket_button">Confirm</a>
+        <div id="confirmTicket_CalendarPart" class="col-xs-12 col-md-8 col-md-offset-2">
+            <h5 id="confirmTicket_CalendarHeader">Delivery Time</h5>
+            <div id="confirmTicket_Calendar"></div>
+        </div>
+        <div class="col-xs-12 col-md-8 col-md-offset-2">
+            <h5 id="confirmTicket_location">Delivery Location</h5>
+            <div id="confirmTicket_Map" class="map" style="margin: auto"></div>
+        </div>
+        <div class="col-xs-12 col-md-8 col-md-offset-2">
+
+            <a type="button" class="btn waves-effects" id="confirmTicket_button">Confirm</a>
         </div>
     </div>
 </div>
