--- a/_driverList.html
+++ b/_driverList.html
@@ -12,17 +12,18 @@
         <div class="col-xs-12">
             <div class="input-field">
                 <div class="text-left" id="_driver_numItems"></div>
-                <div class="text-left" id="driver_note"></div>
+
             </div>
+            <h5 id="driver_note"></h5>
         </div>
 
         <div class="col-xs-12">
-            <a id="driverList-location-back" type="button" class="btn waves-effects orange"><< Back</a>
-            <a id="_driver_submit_list" type="button" class="waves-teal btn waves-effects">
-                Complete
-            </a>
+            <a id="driverList-location-back" type="button" class="btn waves-effects "><< Back</a>
             <a id="driver_messenger" type="button" class="waves-teal btn waves-effects">
                 Messenger
+            </a>
+            <a id="_driver_submit_list" type="button" class="waves-teal btn waves-effects">
+                Complete >>
             </a>
         </div>
     </div>
