--- a/_purchasedTickets.html
+++ b/_purchasedTickets.html
@@ -1,53 +1,45 @@
 <div class="container box text-center" id="purchasedTickets">
     <div class="row" id="purchasedTicketsListHeader">
-        <div class ="col-xs-offset-4 col-xs-4">
+        <div class="col-xs-offset-4 col-xs-4">
             <img class="img-circle" id="purchasedTickets-img" src="placeholder/person4.png">
         </div>
-        <div class="col-xs-12">
+        <div class="col-xs-12 col-md-8 col-md-offset-2">
             <h2 id="listName_purchasedTickets"></h2>
             <h3 id="phone_purchasedTickets"></h3>
         </div>
     </div>
     <div class="row">
-        <div class="col-xs-12">
+        <div class="col-xs-12 col-md-8 col-md-offset-2">
+            <h5>Items</h5>
             <ul id="purchasedTickets_list"></ul>
         </div>
-    </div>
-
-    <div class="row">
-        <div class="col-xs-12">
+        <div class="col-xs-12 col-md-8 col-md-offset-2">
             <div class="input-field">
-                <label for="purchasedTickets_note">Special Note:</label>
-                <input disabled type="text" class="form-control bfh-phone" data-country="US"
-                       id="purchasedTickets_note">
+                <h5>Special Note</h5>
+                <div disabled type="text" class="" data-country="US"
+                     id="purchasedTickets_note">
+                </div>
+            </div>
+
+            <div id="purchasedTicketsCalendarPart">
+                <h5 id="purchasedTicketsCalendarHeader">Delivery Time</h5>
+                <div id="purchasedTicketsCalendar"></div>
+            </div>
+            <div>
+                <h5>Delivery Location</h5>
+                <div id="purchasedTickets_location"></div>
+                <div id="purchasedTicketsMap" class="map" style="margin: auto"></div>
             </div>
         </div>
-    </div>
 
-    <div class="row">
-        <div id="purchasedTicketsCalendarPart" class="col-xs-12">
-            <div class="text-left" id="purchasedTicketsCalendarHeader">Delivery time:</div>
-            <div id="purchasedTicketsCalendar"></div>
-        </div>
-    </div>
-
-    <div class="row">
-        <div class="col-xs-12">
-            <div class="text-left" id="purchasedTickets_location"></div>
-            <div id="purchasedTicketsMap" class="map"></div>
-        </div>
-    </div>
-
-    <div class="row">
-        <div class="col-xs-12">
+        <div class="col-xs-12 col-md-8 col-md-offset-2">
             <div class="row" id="purchasedTickets_footerInfo">
-                <div class="col-xs-12">
-                    <a id="purchasedTickets-back" type="button" class="btn waves-effects orange"><< Back</a>
-                    <a id="purchasedTickets-messenger" type="button" class="btn waves-effects orange">
-                        Messenger
-                    </a>
-                    <a id="purchasedTickets_submit_list" type="button" class="btn waves-effects orange">Close Ticket >></a>
-                </div>
+                <a id="purchasedTickets-back" type="button" class="btn waves-effects "><< Back</a>
+                <a id="purchasedTickets-messenger" type="button" class="btn waves-effects ">
+                    Messenger
+                </a>
+                <a id="purchasedTickets_submit_list" type="button" class="btn waves-effects ">Close Ticket
+                    >></a>
             </div>
         </div>
     </div>
