--- a/_rateUser.html
+++ b/_rateUser.html
@@ -1,5 +1,5 @@
 <div id="rateUser" class="container box text-center">
-    <div class="row">
+    <div class="row ratingSize">
 
         <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 userIcon">
             <!--<h2>Account Information</h2>-->
@@ -10,7 +10,7 @@
 
         <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 " id="rateUser-content" >
             <h2>Rate the shopper!</h2>
-            <h3 id="user-name_rateUser">Shopper name: Gary Gillespie</h3>
+            <h3 class="hidden" id="user-name_rateUser"></h3>
 
             <div class="rating">
                 <span id="user_rating-1" class="glyphicon glyphicon-heart"></span>
@@ -23,8 +23,8 @@
 
     </div>
     <div class="col-xs-12">
-        <a id="rate-user-skip" type="button" class="btn waves-effect orange userRate_button">Skip</a>
-        <a id="rate-user" type="button" class="btn waves-effect orange userRate_button">Rate!</a>
+        <a id="rate-user-skip" type="button" class="btn waves-effect userRate_button">Skip</a>
+        <a id="rate-user" type="button" class="btn waves-effect userRate_button">Rate!</a>
     </div>
 
 </div>
