--- a/_tickets.html
+++ b/_tickets.html
@@ -20,14 +20,14 @@
         <div class="col-xs-6 col-md-3">
             <div class="store-ticket" >
                 <input class="ticket-check" type="checkbox"  data-name="tjs"id="tjs" />
-                <label for="tjs"> TJ's</label>
+                <label for="tjs"> SUNSHINE</label>
             </div>
         </div>
 
         <div class="col-xs-6 col-md-3">
             <div class="store-ticket" >
                 <input class="ticket-check" type="checkbox"  data-name="wholeFoods"id="wholeFoods" />
-                <label for="wholeFoods"> W F</label>
+                <label for="wholeFoods"> WHOLEFOODS</label>
             </div>
         </div>
 
@@ -42,6 +42,14 @@
     <div class="row">
         <div class="col-xs-12">
             <ul id="tickets_content" class=text-center"></ul>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-xs-12">
+            <a id="tickets_dashboard_btn" type="button" class="waves-teal btn waves-effects">
+                Your Deliveries
+            </a>
         </div>
     </div>
 </div>
