--- a/index.html
+++ b/index.html
@@ -827,26 +827,26 @@
 
 
         pageInit();
-        for (var j = 0; j < allPages.length; j++) {
-            $('#page-content').append('<div id="section-' + j + '"></div>');
-            for (var i = 0; i < allPages[j].length; i++) {
-                var whichid = allPages[j][i];
-                loadPage(whichid, j, i);
-                var clickVal = "onclick=\"goToPage('" + whichid + "');\"";
-                $("#Butt").append("<div " + clickVal + " >" + whichid + "</div>");
-            }
-        }
-
-
-//        $.ajax({
-//            type: "POST",
-//            url: "/loadPage",
-//            data: {name: "allPages"},
-//            async: false,
-//            success: function (data) {
-//                $('#page-content').append(data);
+//        for (var j = 0; j < allPages.length; j++) {
+//            $('#page-content').append('<div id="section-' + j + '"></div>');
+//            for (var i = 0; i < allPages[j].length; i++) {
+//                var whichid = allPages[j][i];
+//                loadPage(whichid, j, i);
+//                var clickVal = "onclick=\"goToPage('" + whichid + "');\"";
+//                $("#Butt").append("<div " + clickVal + " >" + whichid + "</div>");
 //            }
-//        });
+//        }
+
+
+        $.ajax({
+            type: "POST",
+            url: "/loadPage",
+            data: {name: "allPages"},
+            async: false,
+            success: function (data) {
+                $('#page-content').append(data);
+            }
+        });
         done = true;
         if (timeup) {
             $("#page-title").removeClass('title-cover');
