fixed edit pictuer button

--- a/_accSetting.html
+++ b/_accSetting.html
@@ -67,7 +67,7 @@
 
     </div>
     <div class="row input-filed">
-        <div class="col-xs-12">
+        <div class="col-s-6">
             <div class="alert alert-danger fade in" id="accsetting_warning">
                 <strong>Danger!</strong> There are some empty fields!
             </div>
