Fixed photo not showing up on accsetting after taken

--- a/_accSetting.html
+++ b/_accSetting.html
@@ -6,7 +6,7 @@
             <div class = "row test">
                 <div class = "col-xs-12">
                     <div id="user-image-content" >
-                        <img class="img-circle" id="accSettingAbove-img" src="placeholder/person4.png">
+                        <img  onclick="goToPage('_takeProfilePicture')" class="img-circle" id="accSettingAbove-img" src="placeholder/person4.png">
                     </div>
                 </div>
             </div>
