--- a/index.html
+++ b/index.html
@@ -11,13 +11,11 @@
     <link href='https://fonts.googleapis.com/css?family=Lobster' rel='stylesheet' type='text/css'>
 
 
-
-    <link rel="icon"  type="image/png" href="resources/images/favicon.png">
-
+    <link rel="icon" type="image/png" href="resources/images/favicon.png">
 
 
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-        <!-- Compiled and minified CSS -->
+    <!-- Compiled and minified CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/css/materialize.min.css">
 
     <!-- Compiled and minified JavaScript -->
@@ -43,8 +41,58 @@
 <div id="chats">
 
 </div>
-<div id="loading" class="hidden">
-    <span class="glyphicon glyphicon-repeat glyphicon-repeat-animate"></span>
+<div id="loading">
+    <div id="loading-spinner">
+        <div class="preloader-wrapper big active">
+            <div class="spinner-layer spinner-blue">
+                <div class="circle-clipper left">
+                    <div class="circle"></div>
+                </div>
+                <div class="gap-patch">
+                    <div class="circle"></div>
+                </div>
+                <div class="circle-clipper right">
+                    <div class="circle"></div>
+                </div>
+            </div>
+
+            <div class="spinner-layer spinner-red">
+                <div class="circle-clipper left">
+                    <div class="circle"></div>
+                </div>
+                <div class="gap-patch">
+                    <div class="circle"></div>
+                </div>
+                <div class="circle-clipper right">
+                    <div class="circle"></div>
+                </div>
+            </div>
+
+            <div class="spinner-layer spinner-yellow">
+                <div class="circle-clipper left">
+                    <div class="circle"></div>
+                </div>
+                <div class="gap-patch">
+                    <div class="circle"></div>
+                </div>
+                <div class="circle-clipper right">
+                    <div class="circle"></div>
+                </div>
+            </div>
+
+            <div class="spinner-layer spinner-green">
+                <div class="circle-clipper left">
+                    <div class="circle"></div>
+                </div>
+                <div class="gap-patch">
+                    <div class="circle"></div>
+                </div>
+                <div class="circle-clipper right">
+                    <div class="circle"></div>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
 
 <div id="page-title" class="title-cover">
@@ -56,12 +104,14 @@
         <div class="row">
             <div id="Glyph" class="col-xs-1 col-xs-offset-1">
                 <div id="index_login_top" style="display:none"><a style="text-decoration:none"
-                                                                  onclick="goToPage('_login')"><h6>LOGIN</h6></a></div>
-                <div id="open-menu-drawer" style="display:none"><span class="glyphicon glyphicon-menu-hamburger"></span>
+                                                                  onclick="goToPage('_login')"><h6>LOGIN</h6></a>
+                </div>
+                <div id="open-menu-drawer" style="display:none"><span
+                        class="glyphicon glyphicon-menu-hamburger"></span>
                 </div>
             </div>
             <!--<div id="Fetch" class=" text-center col-xs-8">-->
-                <!--<div id="title">Fetch</div>-->
+            <!--<div id="title">Fetch</div>-->
             <!--</div>-->
             <!--<div class="col-xs-3"></div>-->
         </div>
@@ -448,8 +498,6 @@
 //        },
 
 
-
-
         currentPageChanged: null,
         addNotification: function (notification) {
             var e = document.createElement('div');
@@ -654,10 +702,11 @@
 //                }
 //            });
         },
-        showInProgress: function(){
+        showInProgress: function () {
+            $('#loading').
             $('#loading').removeClass("hidden");
         },
-        hideInProgress: function(){
+        hideInProgress: function () {
             $('#loading').addClass('hidden');
         }
     };
@@ -817,16 +866,14 @@
     }
 
 
-
-
     $(document).ready(function () {
 
         var done = false;
         var timeup = false;
-        setTimeout(function(){
+        setTimeout(function () {
             $("#title-inner").removeClass('initial');
         }, 1000);
-        setTimeout(function(){
+        setTimeout(function () {
             if (done) {
                 $("#page-title").removeClass('title-cover');
             }
