locatino get/load/init

--- a/_checkout.html
+++ b/_checkout.html
@@ -34,7 +34,7 @@
     <div class="row" style="text-align: center">
         <div class="col-xs-12">
             <a id="checkout-back" type="button" class="btn waves-effects"><< Back</a>
-            <a id="checkout_submitcheckout" type="button" class="btn waves-effects">Pay and Submit >></a>
+            <a id="checkout_submitcheckout" type="button" class="btn waves-effects">Select >></a>
         </div>
     </div>
 
