--- a/allPages.html
+++ b/allPages.html
@@ -536,7 +536,7 @@
                         <div id="map-select-loc"></div>
                         <div id="centerMarker-select-loc"></div>
                         <script type="text/javascript" src="js/_deliveryLocation.js"></script>
-                        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDBmhEjZ6m4l05dajXYQ0fbMPdm2-wg9-U&amp;callback=loader._deliveryLocation.loadData"
+                        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDBmhEjZ6m4l05dajXYQ0fbMPdm2-wg9-U&amp;callback=loader._deliveryLocation.initMap"
                                 async="" defer=""></script>
                     </div>
                     <div class="col-xs-12">
@@ -1184,7 +1184,7 @@
         </div>
     </div>
     <div>
-        <div id="_congrats_driver_finish_shopping" data-x="3" data-y="4">
+        <div id="_congratsDriverFinishShopping" data-x="3" data-y="4">
             <div class="container box text-center">
                 <div class="row">
                     <div class="col-xs-12">
@@ -1202,7 +1202,7 @@
                 <div class="footer2"></div>
                 <div class="footer3"></div>
             </div>
-            <script src="js/_congrats_driver_finish_shopping.js"></script>
+            <script src="js/_congratsDriverFinishShopping.js"></script>
         </div>
     </div>
 </div>
