--- a/_accSetting.html
+++ b/_accSetting.html
@@ -1,12 +1,11 @@
 <div id="accSetting" class="container box text-center">
     <div class="row">
-
         <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 userIcon" >
             <!--<h2>Account Information</h2>-->
             <div class = "row test">
                 <div class = "col-xs-12">
                     <div id="user-image-content" >
-                        <img class="img-circle" id="accSettingAbove-img" src="placeholder/person4.png">
+                        <img  onclick="goToPage('_takeProfilePicture')" class="img-circle" id="accSettingAbove-img" src="placeholder/person4.png">
                     </div>
                 </div>
             </div>
@@ -67,7 +66,7 @@
 
     </div>
     <div class="row input-filed">
-        <div class="col-xs-12">
+        <div class="col-s-6">
             <div class="alert alert-danger fade in" id="accsetting_warning">
                 <strong>Danger!</strong> There are some empty fields!
             </div>
