--- a/index.html
+++ b/index.html
@@ -11,13 +11,11 @@
     <link href='https://fonts.googleapis.com/css?family=Lobster' rel='stylesheet' type='text/css'>
 
 
-
-    <link rel="icon"  type="image/png" href="resources/images/favicon.png">
-
+    <link rel="icon" type="image/png" href="resources/images/favicon.png">
 
 
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-        <!-- Compiled and minified CSS -->
+    <!-- Compiled and minified CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/css/materialize.min.css">
 
     <!-- Compiled and minified JavaScript -->
@@ -43,6 +41,59 @@
 <div id="chats">
 
 </div>
+<div id="loading">
+    <div id="loading-spinner">
+        <div class="preloader-wrapper big active">
+            <div class="spinner-layer spinner-blue">
+                <div class="circle-clipper left">
+                    <div class="circle"></div>
+                </div>
+                <div class="gap-patch">
+                    <div class="circle"></div>
+                </div>
+                <div class="circle-clipper right">
+                    <div class="circle"></div>
+                </div>
+            </div>
+
+            <div class="spinner-layer spinner-red">
+                <div class="circle-clipper left">
+                    <div class="circle"></div>
+                </div>
+                <div class="gap-patch">
+                    <div class="circle"></div>
+                </div>
+                <div class="circle-clipper right">
+                    <div class="circle"></div>
+                </div>
+            </div>
+
+            <div class="spinner-layer spinner-yellow">
+                <div class="circle-clipper left">
+                    <div class="circle"></div>
+                </div>
+                <div class="gap-patch">
+                    <div class="circle"></div>
+                </div>
+                <div class="circle-clipper right">
+                    <div class="circle"></div>
+                </div>
+            </div>
+
+            <div class="spinner-layer spinner-green">
+                <div class="circle-clipper left">
+                    <div class="circle"></div>
+                </div>
+                <div class="gap-patch">
+                    <div class="circle"></div>
+                </div>
+                <div class="circle-clipper right">
+                    <div class="circle"></div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 
 <div id="page-title" class="title-cover">
     <div id="cover"></div>
@@ -53,12 +104,14 @@
         <div class="row">
             <div id="Glyph" class="col-xs-1 col-xs-offset-1">
                 <div id="index_login_top" style="display:none"><a style="text-decoration:none"
-                                                                  onclick="goToPage('_login')"><h6>LOGIN</h6></a></div>
-                <div id="open-menu-drawer" style="display:none"><span class="glyphicon glyphicon-menu-hamburger"></span>
+                                                                  onclick="goToPage('_login')"><h6>LOGIN</h6></a>
+                </div>
+                <div id="open-menu-drawer" style="display:none"><span
+                        class="glyphicon glyphicon-menu-hamburger"></span>
                 </div>
             </div>
             <!--<div id="Fetch" class=" text-center col-xs-8">-->
-                <!--<div id="title">Fetch</div>-->
+            <!--<div id="title">Fetch</div>-->
             <!--</div>-->
             <!--<div class="col-xs-3"></div>-->
         </div>
@@ -158,6 +211,8 @@
         username1: []
     }
     var loader = {
+        x: 0,
+        y: 0,
         activeCyclesLeft: 20,
         isDriver: false,
         isLoggedIn: false,
@@ -347,10 +402,23 @@
             if (id.length) {
                 var item = $('#' + id);
                 if (item) {
-                    $("#page-content").css('transform',
-                            'translate(-' + $(item).data("x") * 100 + '%, -' + $(item).data("y") * 100 + '%)')
+                    var x = $(item).data("x");
+                    var y = $(item).data("y");
+                    var xdiff = (x - loader.x);
+                    var ydiff = (y - loader.y);
+                    loader.x = x;
+                    loader.y = y;
+                    var duration = Math.sqrt(xdiff * xdiff + ydiff * ydiff) * 0.4;
+                    if (duration < 1) {
+                        duration = 1;
+                    }
+                    $("#page-content").css({
+                        transition: 'transform ' + duration + 's',
+                        transform: 'translate(-' + x * 100 + '%, -' + y * 100 + '%)'
+                    });
                 }
             }
+
         },
         setCurrentPage: function (page, noPrevious) {
             if (loader.currentPage != page) {
@@ -378,7 +446,8 @@
                 });
                 loader.goToPage(page);
             }
-        },
+        }
+        ,
         updateShopping: function () {
 
             $.ajax({
@@ -407,44 +476,43 @@
                     }
                 }
             });
-        },
-//        userConfirm: function(){
-//            $.ajax({
-//                type: "POST",
-//                contentType: "application/json",
-//                dataType: "json",
-//                url: "/userConfirm",
-//                data: JSON.stringify({
-//                   // userId: loader.userId,
-//                     ticketId: loader._driverList.data
-//                    //isConfirmed: true
-//                })
-////                success: function(data){
-////                    loader.isDriver = data.isDriver;
-////                }
-//            });
-//        },
-//        checkConfirm: function( ) {
-//            $.ajax({
-//                type: "POST",
-//                contentType: "application/json",
-//                dataType: "json",
-//                url: "/checkConfirm",
-//                data: JSON.stringify({
-//                    ticketId: loader.ticketId
-//
-//                }),
-//                success: function (data) {
-//                    if (data.finalConfirmed && loader.isDriver)
-//                        goToPage("_rateUser");
-//                    if (data.finalConfirmed && !loader.isDriver)
-//                        goToPage("_rateDriver");
-//
-//                }
-//            })
-//        },
-
-
+        }
+        ,
+        //        userConfirm: function(){
+        //            $.ajax({
+        //                type: "POST",
+        //                contentType: "application/json",
+        //                dataType: "json",
+        //                url: "/userConfirm",
+        //                data: JSON.stringify({
+        //                   // userId: loader.userId,
+        //                     ticketId: loader._driverList.data
+        //                    //isConfirmed: true
+        //                })
+        ////                success: function(data){
+        ////                    loader.isDriver = data.isDriver;
+        ////                }
+        //            });
+        //        },
+        //        checkConfirm: function( ) {
+        //            $.ajax({
+        //                type: "POST",
+        //                contentType: "application/json",
+        //                dataType: "json",
+        //                url: "/checkConfirm",
+        //                data: JSON.stringify({
+        //                    ticketId: loader.ticketId
+        //
+        //                }),
+        //                success: function (data) {
+        //                    if (data.finalConfirmed && loader.isDriver)
+        //                        goToPage("_rateUser");
+        //                    if (data.finalConfirmed && !loader.isDriver)
+        //                        goToPage("_rateDriver");
+        //
+        //                }
+        //            })
+        //        },
 
 
         currentPageChanged: null,
@@ -461,7 +529,8 @@
                 e.firstChild.dataset.changepage = "false";
                 $(e).children().trigger("click");
             }, 5000);
-        },
+        }
+        ,
 
         closeNotification: function (page, element) {
 
@@ -473,7 +542,8 @@
             setTimeout(function () {
                 p.parentNode.removeChild(p);
             }, 600);
-        },
+        }
+        ,
         //set to run every second elsewhere
         getUpdates: function () {
 
@@ -540,13 +610,15 @@
                 });
 
             }
-        },
+        }
+        ,
         signUp: function (data) {
             var d = new Date();
             d.setTime(d.getTime() + (1000 * 24 * 60 * 60 * 1000));
             document.cookie = "user=" + data.userId + ";expires=" + d.toUTCString();
             goToPage("_verifyEmail");
-        },
+        }
+        ,
         login: function (data) { //Called after successful login, passing the returned data
             index_login();
             console.log("login");
@@ -628,7 +700,8 @@
 //                    alert("fail")
 //                }
 //            });
-        },
+        }
+        ,
         switchToShopper: function () {
             goToPage("_history", true);
 //            alert();
@@ -651,6 +724,19 @@
 //                }
 //            });
         }
+        ,
+        showInProgress: function () {
+            $('#loading').css('z-index', '9999999');
+            $('#loading').css('opacity', '1');
+        }
+        ,
+        hideInProgress: function () {
+            $('#loading').css('opacity', '0');
+            setTimeout(function () {
+                $('#loading').css('z-index', '-2');
+            }, 500);
+
+        }
     };
     //loader.currentPageChanged = _.throttle(loader.sendData, 501);
 
@@ -671,7 +757,7 @@
         geocoder.geocode({'location': latLng}, function (results, status) {
             if (status === google.maps.GeocoderStatus.OK) {
                 if (results[1]) {
-                    map.setZoom(17);
+                    map.setZoom(16);
                     var marker = new google.maps.Marker({
                         position: latLng,
                         map: map,
@@ -808,16 +894,14 @@
     }
 
 
-
-
     $(document).ready(function () {
 
         var done = false;
         var timeup = false;
-        setTimeout(function(){
+        setTimeout(function () {
             $("#title-inner").removeClass('initial');
         }, 1000);
-        setTimeout(function(){
+        setTimeout(function () {
             if (done) {
                 $("#page-title").removeClass('title-cover');
             }
@@ -827,6 +911,8 @@
 
 
         pageInit();
+
+
 //        for (var j = 0; j < allPages.length; j++) {
 //            $('#page-content').append('<div id="section-' + j + '"></div>');
 //            for (var i = 0; i < allPages[j].length; i++) {
@@ -852,15 +938,6 @@
             $("#page-title").removeClass('title-cover');
         }
 
-//        $.ajax({
-//            type: "POST",
-//            url: "/loadPage",
-//            data: {name: "allPages"},
-//            async: false,
-//            success: function (data) {
-//                $('#page-content').append(data);
-//            }
-//        });
 
         $("#index_login_top").show();
         $("#open-menu-drawer").show();
