--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
     var loader = {
         x: 0,
         y: 0,
-        activeCyclesLeft: 20,
+        activeCyclesLeft: 10,
         isDriver: false,
         isLoggedIn: false,
         userId: "",
@@ -396,7 +396,7 @@
             data: null
         },
         setActive: function () {
-            loader.activeCyclesLeft = 20;
+            loader.activeCyclesLeft = 6;
         },
         goToPage(id){
             //Only move if given a string with an actual value
@@ -410,8 +410,12 @@
                     loader.x = x;
                     loader.y = y;
                     var duration = Math.sqrt(xdiff * xdiff + ydiff * ydiff) * 0.4;
+
                     if (duration < 1) {
                         duration = 1;
+                    }
+                    else if (duration < 2) {
+                        duration = 2;
                     }
                     $("#page-content").css({
                         transition: 'transform ' + duration + 's',
@@ -429,11 +433,12 @@
                     }
                 }
                 if (loader.hasOwnProperty(page)) {
-
                     if (loader[page].hasOwnProperty("onPageLoad")) {
                         loader[page].onPageLoad();
+
                     }
                 }
+
                 loader.previousPage = loader.currentPage;
                 loader.currentPage = page;
                 $.ajax({
@@ -446,22 +451,41 @@
                     })
                 });
                 loader.goToPage(page);
+
             }
         }
         ,
+        shoppingVersion: 0,
+        checkoutVersion: 0,
+        timeVersion: 0,
+        locationVersion: 0,
         updateShopping: function () {
+            var toSend = {
+                shoppingVersion: loader._shopping.version,
+                checkoutVersion: loader._checkout.version,
+                timeVersion: loader._deliveryTime.version,
+                locationVersion: loader._deliveryLocation.version
+            };
+
+            if (toSend.shoppingVersion > loader.shoppingVersion){
+                toSend.list = loader._shopping.getData();
+            }
+            if (toSend.checkoutVersion > loader.checkoutVersion){
+                toSend.checkout = loader._checkout.getData();
+            }
+            if (toSend.timeVersion > loader.timeVersion){
+                toSend.time= loader._deliveryTime.getData();
+            }
+            if (toSend.locationVersion > loader.locationVersion){
+                toSend.location= loader._deliveryLocation.getData();
+            }
 
             $.ajax({
                 type: "POST",
                 contentType: "application/json",
                 dataType: "json",
                 url: "/_shopping",
-                data: JSON.stringify({
-                    shoppingVersion: loader._shopping.version,
-                    list: loader._shopping.getData(),
-                    checkoutVersion: loader._checkout.version,
-                    checkout: loader._checkout.getData()
-                }),
+                data: JSON.stringify(toSend),
                 success: function (data) {
                     if (data.list) {
                         loader._shopping.loadData(data.list);
@@ -472,11 +496,20 @@
                         loader._checkout.loadData(data.checkout);
                         loader._checkout.version = data.checkoutVersion;
                     }
-                    if (data.currentPage != loader.currentPage) {
-                        loader.setCurrentPage(data.currentPage, whatever);
+                    if (data.time) {
+                        loader._deliveryTime.loadData(data.time);
+                        loader._deliveryTime.version = data.timeVersion;
                     }
+                    if (data.location) {
+                        loader._deliveryLocation.loadData(data.location);
+                        loader._deliveryLocation.version = data.locationVersion;
+                    }
+//                        if (data.currentPage != loader.currentPage) {
+//                            loader.setCurrentPage(data.currentPage, whatever);
+//                        }
                 }
             });
+
         }
         ,
         //        userConfirm: function(){
@@ -551,7 +584,7 @@
             //Only update if not active
             if (loader.isLoggedIn && loader.userId.length > 0) {
                 //keep updating no matter what
-                if (loader.currentPage == "_shopping" || loader.currentPage == "_checkout") {
+                if (loader.currentPage == "_shopping" || loader.currentPage == "_deliveryLocation"|| loader.currentPage == "_deliveryTime" || loader.currentPage == "_checkout") {
                     loader.updateShopping();
                 }
                 if (loader.activeCyclesLeft > 0) {
